Aktualizacja podstrony WiFI do nowego API

--- a/src/components/layouts/WorldsContestComponent/WorldsContestHomeComponent/worldscontest.scss
+++ b/src/components/layouts/WorldsContestComponent/WorldsContestHomeComponent/worldscontest.scss
@@ -13,7 +13,7 @@ $colour2: #de1444;
   font-size: 28px;
 }
 
-.minicard {
+.worlds-minicard {
   @include shadow("nonclikable");
   background-color: white;
   width: 280px;
